@@ -41,7 +41,8 @@ lsrc_aarch64 += \
 	crc/aarch64/crc64_iso_norm_pmull.S \
 	crc/aarch64/crc64_jones_refl_pmull.S \
 	crc/aarch64/crc64_jones_norm_pmull.S \
-	crc/aarch64/crc64_rocksoft.c
+	crc/aarch64/crc64_rocksoft_refl_pmull.S \
+	crc/aarch64/crc64_rocksoft_norm_pmull.S
 
 
 #CRC32/CRC32C for micro-architecture
